--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "less": "^2.7.2"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": ">=4.1.2",
     "bootstrap-colorpicker": "^2.5.1",
     "bootstrap-datepicker": "^1.7.0",
     "bootstrap-daterangepicker": "^2.1.25",
@@ -64,6 +64,9 @@
     "pace": "0.0.4",
     "raphael": "^2.2.7",
     "select2": "^4.0.3",
-    "slimscroll": "^0.9.1"
+    "slimscroll": "^0.9.1",
+    "hoek": ">=4.2.1",
+    "lodash": ">=4.17.5",
+    "cryptiles": ">=4.1.2"
   }
 }
